public_html/tasks/style.css
/* ... */
	
	.today-shortcut:hover,
	.today-shortcut:focus,
	.ui-datepicker-trigger:hover,
	.ui-datepicker-trigger:focus,
	#create-task:hover,
	#create-task:focus,
	.previous-day:hover,
	.previous-day:focus,
	.next-day:hover,
	.next-day:focus {
		background: #AAA5B6;
		background: -webkit-gradient(linear, left top, left bottom, from(#AAA5B6), to(#87838F));
		background: -moz-linear-gradient(top, #AAA5B6, #87838F);		
	}
			
	.today-shortcut {
		display: block;
		float: right;
		height: 30px;
		line-height: 30px;
		margin-right: 10px;
		padding: 0 10px;
		text-align: center;
		text-decoration: none;
	}
	
	.today-shortcut:hover {
	}

	#date-pick {
		float: right;
		position: relative;
		width: 32px;
		height: 32px;
	}

		.ui-datepicker-trigger {
			cursor: pointer;
			display: block;
		}
		
	.create-task {
		float: right;
		position: relative;
	}
	
		#create-task {
			display: block;
			font-size: 2em;
			margin-left: 10px;
			position: relative;
			text-align: center;
			text-decoration: none;
			width: 30px;
			height: 30px;
			line-height: 22px;
			z-index: 20;
		}
		
		#create-task:hover,
		.creating-task #create-task {
		}
		
		.creating-task:before,
		#task-creator {
			-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
			-moz-box-shadow: 0 0 10px rgba(0,0,0,0.2);
			box-shadow: 0 0 10px rgba(0,0,0,0.2);
		}

		.creating-task:before {
			content: '';
			display: block;
			position: absolute;
				right: -5px;
				top: -5px;
			width: 40px;
			height: 40px;
			z-index: 5
		}
		
		.creating-task:after,
		#task-creator {
			background: #706D77;
			border: solid 1px #575361;
		}
			
		.creating-task:after {
			background: #706D77;
			-moz-border-radius: 3px 3px 0 0;
			-webkit-border-radius: 3px 3px 0 0;
			border-radius: 3px 3px 0 0;
			border-bottom: none;
			content: '';
			display: block;
			position: absolute;
				right: -5px;
				top: -5px;
			width: 40px;
			height: 40px;
			z-index: 15;
		}
		
		#task-creator {
			-moz-border-radius: 3px 0 3px 3px;
			-webkit-border-radius: 3px 0 3px 3px;
			border-radius: 3px 0 3px 3px;
			padding: 10px;
			position: absolute;
				right: -5px;
				top: 35px;
			width: 500px;
			z-index: 10;
		}
		
			#task {
				background: #FFF;
				-moz-border-radius: 3px 3px 0 0;
				-webkit-border-radius: 3px 3px 0 0;
				border-radius: 3px 3px 0 0;
				border: solid 1px #A3A3A3;
				border-bottom-color: #D3D3D3;
				padding: 5px 10px;
				width: 478px;
				height: 30px;
				line-height: 30px;
			}

			.creator-edit-bar {
				background: #d3d3d3;
				background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#d3d3d3));
				background: -moz-linear-gradient(top, #e3e3e3, #d3d3d3);
				-moz-border-radius: 0 0 3px 3px;
				-webkit-border-radius: 0 0 3px 3px;
				border-radius: 0 0 3px 3px;
				border: solid 1px #a3a3a3;
				border-top: none;
				height: 30px;
			}
			
				.creator-edit-bar select {
					float: left;
					margin: 5px;
				}
				
				.creator-link-options {
					float: right;
				}
				
				.creator-edit-bar input {
					background: #FFF;
					border: solid 1px #c3c3c3;
					-moz-border-radius: 3px;
					-webkit-border-radius: 3px;
					border-radius: 3px;
					color: #a3a3a3;
					float: left;
					margin: 2px;
					padding: 2px 5px;
					width: 134px;
					height: 20px;
					line-height: 20px;
				}
				
				.creator-edit-bar input:focus,
				.creator-edit-bar input.has-text {
					color: #333;
				}
				
				#task-creator .actions {
					float: right;
					padding-top: 10px;
				}
				
					#cancel-task,
					#save-task {
						-moz-border-radius: 3px;
						-webkit-border-radius: 3px;
						border-radius: 3px;
						-webkit-box-shadow: inset 0 0 1px rgba(255,255,255,0.5);
						-moz-box-shadow: inset 0 0 1px rgba(255,255,255,0.5);
						box-shadow: inset 0 0 1px rgba(255,255,255,0.5);
						display: block;
						float: left;
						font-size: .9em;
						height: 28px;
						line-height: 28px;
						outline: none;
						padding: 0 10px;
						text-decoration: none;
					}
				
					#cancel-task {
						background: #f8f8f8;
						background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#e3e3e3));
						background: -moz-linear-gradient(top, #f8f8f8, #e3e3e3);
						border: solid 1px #c3c3c3;
						color: #4B2020;
					}
					
						#cancel-task:hover,
						#cancel-task:focus {
							background: #e3e3e3;
							background: -webkit-gradient(linear, left top, left bottom, from(#e3e3e3), to(#d3d3d3));
							background: -moz-linear-gradient(top, #e3e3e3, #d3d3d3);
						}
					
					#save-task {
						background: #344321;
						background: -webkit-gradient(linear, left top, left bottom, from(#45572E), to(#344321));
						background: -moz-linear-gradient(top, #45572E, #344321);
						border: solid 1px #344321;
						color: #FFF;
						margin-left: 10px;
					}
					
						#save-task:hover,
						#save-task:focus {
							background: #41502D;
							background: -webkit-gradient(linear, left top, left bottom, from(#52643A), to(#41502D));
							background: -moz-linear-gradient(top, #52643A, #41502D);
						}
					
					#submit-task {
						position: absolute;
						left: -9999px;
					}
				
					.creator-link-options .flagger {
						float: left;
					}
		
	.date {
		border-top: solid 1px #706D77;
		border-bottom: solid 1px #706D77;
		color: #4C4A52;
		float: right;
		height: 30px;
		line-height: 30px;
		padding: 0 10px;
		text-align: center;
		width: 150px;
	}
	
	.previous-day,
	.next-day {
		display: block;
		float: right;
		font-size: 1.5em;
		font-weight: bold;
		text-align: center;
		text-decoration: none;
		width: 30px;
		height: 30px;
		line-height: 25px;
	}
	
	.previous-day {
		-moz-border-radius: 3px 0 0 3px;
		-webkit-border-radius: 3px 0 0 3px;
		border-radius: 3px 0 0 3px;
	}
	
	.next-day {
		-moz-border-radius: 0 3px 3px 0;
		-webkit-border-radius: 0 3px 3px 0;
		border-radius: 0 3px 3px 0;
		margin-right: 10px;
	}
	

/**** 1 Column Layout ****/

.layout-1 .container {
	width: 540px;
}
/* ... */

